<resources>
    <string name="app_name">Rapid Cart</string>
    <string name="sign_in">Sign in</string>
    <string name="name">Name</string>
    <string name="select_your_avatar">Select Your Avatar</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="new_user_sign_up">New User</string>
    <string name="or">Or</string>
    <string name="meat">Meat</string>
    <string name="vegitables">Vegetables</string>
    <string name="fruits">Fruits</string>
    <string name="dairy">Dairy</string>
    <string name="cart">Cart</string>
    <string name="clothes">Clothes</string>
    <string name="essential">Essential</string>
    <string name="confirm_password">Confirm password</string>
    <string name="fingertips">Fingertips !</string>
    <string name="groceries">Groceries</string>
    <string name="at_your">At Your</string>
    <string name="add_your_shop">Add Your Shop</string>
    <string name="del">Delete</string>
    <string name="shop_login">Shop Login</string>
    <string name="store_phone_number">Store Phone Number</string>
    <string name="store_name">Store Name</string>
    <string name="address">Address</string>
    <string name="add_item_to_your_shop">Add item To Your shop</string>
    <string name="enter_price">Enter Price</string>
    <string name="select_your_shop">Select Your shop</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="signup">Signup ?</string>
    <string name="login_in_with_google">Login in with google</string>
    <string name="email">Email</string>
    <string name="dry_fruits">dry fruits</string>
    <string name="stationery">stationery</string>
    <string name="snacks">snacks</string>
    <string name="personal_care">Personal</string>
    <string name="bevrage">bevrage</string>
    <string name="your_name">Your name</string>
    <string name="your_number">Your number</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="minimum_order">Minimum Order :</string>
    <string name="xoxoxo">/Kg</string>
    <string name="rupee">₹</string>
    <string name="check_out">Check Out</string>
    <string name="tap_to_select_location">Tap To Select Location</string>
    <string name="list">List</string>
    <string name="congratulations">congratulations</string>
    <string name="check_your_order">Check Your Order</string>
    <string name="shop_pick">Shop pick</string>
    <string name="select_your_order_type">Select Your Order Type</string>
    <string name="home_delivery">Home Delivery</string>
    <string name="price_details">Price Details</string>
    <string name="price">Price :</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="your_api_key">AIzaSyBSmwO_MPMLfIe5yMVGC3KR2Eouza0rg20</string>
    <string name="add_to_cart">Add To cart</string>
    <string name="lt">/Lt</string>
    <string name="qau">/qau</string>
    <string name="cash_on_delivery">Cash On delivery</string>
    <string name="online">Online</string>
    <string name="total">Total</string>
    <string name="next">Next</string>
    <string name="place_order">Place Order</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="your_orders">Your Orders</string>
    <string name="ooops_sorry_for_inconvenience_we_will_soon_be_available_at_your_location">Ooops! Sorry For Inconvenience We Will Soon Be Available At Your Location</string>
</resources>