<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnlineDeliverytype">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:forceDarkAllowed="false"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="33218shopping.json"
        app:lottie_loop="true">
    </com.airbnb.lottie.LottieAnimationView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:forceDarkAllowed="false"
        android:background="@drawable/cartlayout"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="21dp">

        <TextView
            android:id="@+id/textView44"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:forceDarkAllowed="false"
            android:layout_marginEnd="@dimen/_8sdp"
            android:text="@string/select_your_order_type"
            android:textColor="#FFF"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_height="@dimen/_48sdp"
            android:text="@string/shop_pick"
            android:textSize="@dimen/_16sdp"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:background="@drawable/essentailbuttonbg"
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView44" />

        <TextView
            android:id="@+id/textView45"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_margin="@dimen/_8sdp"
            android:text="Or"
            android:forceDarkAllowed="false"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:text="@string/home_delivery"
            android:textSize="@dimen/_16sdp"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@drawable/essentailbuttonbg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView45" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>