<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:forceDarkAllowed="false"
        android:text="Profile"
        android:textAllCaps="false"
        android:textColor="#5DC049"
        android:textSize="@dimen/_21sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>


    <androidx.cardview.widget.CardView
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="0dp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/_8sdp"
        app:cardBackgroundColor="#E4E4E4"
        app:cardCornerRadius="32sp"
        android:forceDarkAllowed="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <EditText
            android:id="@+id/mailid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#E4E4E4"
            android:hint="Your Name"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:forceDarkAllowed="false"
            android:paddingStart="@dimen/_12sdp"
            android:singleLine="true"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textColorHint="#000">
        </EditText>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="0dp"
        app:cardBackgroundColor="#E4E4E4"
        app:cardCornerRadius="32sp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:forceDarkAllowed="false"
        android:layout_marginStart="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2">

        <EditText
            android:layout_width="match_parent"
            android:hint="@string/your_phone_number"
            android:ems="10"
            android:maxLength="10"
            android:id="@+id/password"
            android:paddingStart="@dimen/_12sdp"
            android:textColor="#000"
            android:backgroundTint="#E4E4E4"
            android:textAllCaps="false"
            android:forceDarkAllowed="false"
            android:singleLine="true"
            android:maxLines="1"
            android:textColorHint="#000"
            android:inputType="number"
            android:layout_height="match_parent">
        </EditText>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/_42sdp"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginTop="32dp"
        android:scaleType="fitXY"
        android:forceDarkAllowed="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
        app:srcCompat="@drawable/ic_baseline_location_on_24" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="0dp"
        android:textSize="@dimen/_16sdp"
        android:textAlignment="center"
        android:textAllCaps="false"

        android:ellipsize="end"
        android:hint="@string/tap_to_select_location"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="@dimen/_8sdp"
        android:forceDarkAllowed="false"
        android:layout_marginEnd="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="@dimen/_54sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/buttonbg"
        android:text="@string/next"
        android:textColor="#FFF"
        android:textSize="@dimen/_24sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:forceDarkAllowed="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:scaleType="centerInside"
        android:forceDarkAllowed="false"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/textView26"
        app:lottie_autoPlay="true"
        app:lottie_fileName="onlineshoppingsearchproductconceptanimation.json"
        app:lottie_loop="true" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:forceDarkAllowed="false"
        android:layout_marginStart="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:srcCompat="@drawable/ic_baseline_home_24" />


</androidx.constraintlayout.widget.ConstraintLayout>